test3-networkTerraform/securitygroup.tf
resource "aws_security_group" "allow_http" {
  name   = "first-lab"
  vpc_id = aws_vpc.my_vpc_01.id

  ingress {
    description = "HTTP from VPC"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = [aws_vpc.my_vpc_01.cidr_block]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
